--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PC'
 - !lcsh 'Catalan language -- Texts'
+- GITenberg
 title: "Un tros de paper\r\nTwo Volumes"
 url: http://www.gutenberg.org/ebooks/22296
